Install winhttp via winetricks

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
+sudo: true
+install:
+- sudo wget -qO /usr/local/bin/winetricks https://raw.githubusercontent.com/Winetricks/winetricks/master/src/winetricks && sudo chmod +x /usr/local/bin/winetricks
+before_script:
+- sudo bash - < <(wget -qO- https://raw.githubusercontent.com/EA31337/FX-MT-VM/master/scripts/provision.sh)
 script:
-- wget ftp://ftp.twaren.net/pub/cpatch/msupdate/win2000/en/w2ksp4_en.exe
+- sh -x /usr/local/bin/winetricks winhttp
