--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ sudo: true
 services:
   - docker
 script:
-- wget ftp://ftp.twaren.net/pub/cpatch/msupdate/win2000/en/w2ksp4_en.exe
+- wget http://ftp.upf.br/pub/win2k/w2ksp4_en.exe
